--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Testcases.State1TC" class="method navigator-link" hash-for-method="eventlist">eventlist</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Testcases.DocumentTypeTest" class="method navigator-link" hash-for-method="DocumentTypeTest">DocumentTypeTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Testcases.State1TC</span>
+              <span class="class-name">Testcases.DocumentTypeTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="eventlist">
-                  </a> <!-- eventlist -->
-                  <span class="method-name">eventlist</span>
+                  <a name="DocumentTypeTest">
+                  </a> <!-- DocumentTypeTest -->
+                  <span class="method-name">DocumentTypeTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/tmp/testng-eclipse--1964471522/testng-customsuite.xml</span>
+            <span class="header-content">/tmp/testng-eclipse--1290264177/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Testcases.State1TC&quot;/&gt;
+      &lt;class name=&quot;Testcases.DocumentTypeTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'eventlist')
-data.setCell(0, 2, 'Testcases.State1TC')
-data.setCell(0, 3, 13384);
+data.setCell(0, 1, 'DocumentTypeTest')
+data.setCell(0, 2, 'Testcases.DocumentTypeTest')
+data.setCell(0, 3, 20417);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <span class="suite-total-time">Total running time: 20 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,22 +221,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Testcases.State1TC</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Testcases.DocumentTypeTest</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">report</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">main</span>
-                <span class="method-start">285 ms</span>
+                <span class="method-start">614 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">eventlist</span>
-                <span class="method-start">4632 ms</span>
+                <span class="method-name">DocumentTypeTest</span>
+                <span class="method-start">10681 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-test after">
+                <span class="method-name">close</span>
+                <span class="method-start">31109 ms</span>
+              </div> <!-- configuration-test after -->
               <div class="configuration-suite after">
                 <span class="method-name">reportflush</span>
-                <span class="method-start">18058 ms</span>
+                <span class="method-start">31329 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
