--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9e7ee8">  <td>24/05/09 13:33:30</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;CommonFunctions.main()[pri:0, instance:Testcases.State1TC@1d2adfbe]">&gt;&gt;main</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@928294079</td>   <td></td> </tr>
-<tr bgcolor="a4b689">  <td>24/05/09 13:33:48</td>   <td>17774</td> <td title="&lt;&lt;State1TC.reportflush()[pri:0, instance:Testcases.State1TC@1d2adfbe]">&lt;&lt;reportflush</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@928294079</td>   <td></td> </tr>
-<tr bgcolor="a4b689">  <td>24/05/09 13:33:35</td>   <td>4347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="State1TC.eventlist()[pri:1, instance:Testcases.State1TC@1d2adfbe]">eventlist</td> 
-  <td>main@928294079</td>   <td></td> </tr>
-<tr bgcolor="a4b689">  <td>24/05/09 13:33:30</td>   <td>-282</td> <td title="&gt;&gt;State1TC.report()[pri:0, instance:Testcases.State1TC@1d2adfbe]">&gt;&gt;report</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@928294079</td>   <td></td> </tr>
+<tr bgcolor="6b83a4">  <td>24/05/13 12:32:07</td>   <td>0</td> <td title="&lt;&lt;DocumentTypeTest.reportflush()[pri:0, instance:Testcases.DocumentTypeTest@4a067c25]">&lt;&lt;reportflush</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@679449777</td>   <td></td> </tr>
+<tr bgcolor="6b83a4">  <td>24/05/13 12:32:06</td>   <td>-220</td> <td>&nbsp;</td><td title="&lt;&lt;DocumentTypeTest.close()[pri:0, instance:Testcases.DocumentTypeTest@4a067c25]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@679449777</td>   <td></td> </tr>
+<tr bgcolor="6b83a4">  <td>24/05/13 12:31:35</td>   <td>-31315</td> <td title="&gt;&gt;DocumentTypeTest.report()[pri:0, instance:Testcases.DocumentTypeTest@4a067c25]">&gt;&gt;report</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@679449777</td>   <td></td> </tr>
+<tr bgcolor="748470">  <td>24/05/13 12:31:36</td>   <td>-30715</td> <td>&nbsp;</td><td title="&gt;&gt;CommonFunctions.main()[pri:0, instance:Testcases.DocumentTypeTest@4a067c25]">&gt;&gt;main</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@679449777</td>   <td></td> </tr>
+<tr bgcolor="6b83a4">  <td>24/05/13 12:31:46</td>   <td>-20648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DocumentTypeTest.DocumentTypeTest()[pri:1, instance:Testcases.DocumentTypeTest@4a067c25]">DocumentTypeTest</td> 
+  <td>main@679449777</td>   <td></td> </tr>
 </table>
